...
    "google_login" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Continue with Google"
          }
        },
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Googleで続ける"
...
    "name_registration_prompt" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "What should we call you?"
          }
        },
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "お名前を教えてください"
...
